Fix comment spacing

--- a/public/assets/styles/mixins/components.less
+++ b/public/assets/styles/mixins/components.less
@@ -79,6 +79,12 @@
   width: 100%;
   transition: background-color .3s;
 
+  // Comments.
+  .list-item__comment {
+    display: block;
+    margin-bottom: 4px;
+  }
+
   .list-item__detail {
     color: @primary-6;
     font-size: 13px;
